Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-765

LP:825075 - Wrong result with multipart key + MIN/MAX loose scan and OR expression in WHERE

    XMLWordPrintable

Details

    Description

      The following test case produces wrong result:

      DROP TABLE IF EXISTS t1;
      CREATE TABLE t1 ( a int, b varchar(1), KEY (b,a));
      INSERT INTO t1 VALUES (0,NULL),(9,NULL),(8,'c'),(4,'d'),(7,'d'),(NULL,'f'),(7,'f'),(8,'g'),(NULL,'j');
       
      SELECT a , b FROM t1 WHERE a IS NULL OR b = 'z' ;
      SELECT max(a) , b FROM t1 WHERE a IS NULL OR b = 'z' GROUP BY b; 

      Attachments

        Issue Links

          Activity

            People

              timour Timour Katchaounov (Inactive)
              philipstoev Philip Stoev (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 5d 0.5h
                  5d 0.5h
                  Remaining:
                  Time Spent - 3d 3h Remaining Estimate - 1d 5.5h
                  1d 5.5h
                  Logged:
                  Time Spent - 3d 3h Remaining Estimate - 1d 5.5h
                  3d 3h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.